--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <div id="map-container">
-        <img src="images/Ashika%20Island.jpg" alt="Current Game Map" id="map-image">
+        <img src="./images/Ashika Island.jpg" alt="Current Game Map" id="map-image">
         <div id="map-overlay">Map Name: ASHIKA ISLAND</div>
         <div id="countdown"><span id="timer">15:00</span></div>
     </div>
