--- a/index.html
+++ b/index.html
@@ -5,21 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>WZ MAP ROTATION</title> <!-- Updated title -->
+    <title>WZ MAP ROTATION</title>
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h4>WZ MAP ROTATION</h4> <!-- Updated header text -->
+            <h4>WZ MAP ROTATION</h4>
             <button id="signInBtn">Sign In</button>
         </div>
     </header>
 
-    <div id="map-container">
-        <img src="/var/www/html/images/Ashika Island.jpg" alt="Current Game Map" id="map-image">
-        <div id="map-overlay">Map Name: ASHIKA ISLAND</div>
-        <div id="countdown"><span id="timer">15:00</span></div>
+    <div class="map-rotation" id="resurgenceQuads">
+        <h2>Resurgence Quads</h2>
+        <div class="map-container">
+            <img src="images/Ashika%20Island.jpg" alt="Current Game Map" class="map-image">
+            <div class="map-overlay"></div>
+            <div class="countdown"><span class="timer"></span></div>
+        </div>
+    </div>
+
+    <div class="map-rotation" id="resurgenceTrios">
+        <h2>Resurgence Trios</h2>
+        <div class="map-container">
+            <img src="images/Vondel.jpg" alt="Current Game Map" class="map-image">
+            <div class="map-overlay"></div>
+            <div class="countdown"><span class="timer">5:00</span></div>
+        </div>
+    </div>
+
+    <div class="map-rotation" id="resurgenceDuos">
+        <h2>Resurgence Duos</h2>
+        <div class="map-container">
+            <img src="images/Vondel.jpg" alt="Current Game Map" class="map-image">
+            <div class="map-overlay"></div>
+            <div class="countdown"><span class="timer">5:00</span></div>
+        </div>
+    </div>
+
+    <div class="map-rotation" id="resurgenceSolos">
+        <h2>Resurgence Solos</h2>
+        <div class="map-container">
+            <img src="images/Vondel.jpg" alt="Current Game Map" class="map-image">
+            <div class="map-overlay"></div>
+            <div class="countdown"><span class="timer">5:00</span></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
