--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <div class="map-rotation" id="resurgenceQuads">
         <h2>Resurgence Quads</h2>
         <div class="map-container">
-            <img src="images/Ashika%20Island.jpg" alt="Current Game Map" class="map-image">
+            <div class="map-rotation"></div>
+            <img src="images/quadsmap.jpg" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
             <div class="countdown"><span class="timer"></span></div>
         </div>
