--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Resurgence Quads</h2>
         <div class="map-container">
             <div class="map-rotation"></div>
-            <img src="images/quadsmap.jpg" alt="Current Game Map" class="map-image">
+            <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
             <div class="countdown"><span class="timer"></span></div>
         </div>
