--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="10">
     <link rel="stylesheet" href="styles.css">
     <title>WZ MAP ROTATION</title>
 </head>
@@ -20,36 +21,38 @@
         <h2>Resurgence Quads</h2>
         <div class="map-container">
             <div class="map-rotation"></div>
-            <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
+            <img src="https://wzmaprotationimages.s3.amazonaws.com/Ashika.jpg" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
             <div class="countdown"><span class="timer"></span></div>
         </div>
     </div>
 
+    <!-- Add similar sections for other rotations (trios, duos, solos) -->
+
     <div class="map-rotation" id="resurgenceTrios">
         <h2>Resurgence Trios</h2>
         <div class="map-container">
-            <img src="images/Vondel.jpg" alt="Current Game Map" class="map-image">
+            <img src="https://wzmaprotationimages.s3.amazonaws.com/Ashika.jpg" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
-            <div class="countdown"><span class="timer">5:00</span></div>
+            <div class="countdown"><span class="timer"></span></div>
         </div>
     </div>
 
     <div class="map-rotation" id="resurgenceDuos">
         <h2>Resurgence Duos</h2>
         <div class="map-container">
-            <img src="images/Vondel.jpg" alt="Current Game Map" class="map-image">
+            <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
-            <div class="countdown"><span class="timer">5:00</span></div>
+            <div class="countdown"><span class="timer"></span></div>
         </div>
     </div>
 
     <div class="map-rotation" id="resurgenceSolos">
         <h2>Resurgence Solos</h2>
         <div class="map-container">
-            <img src="images/Vondel.jpg" alt="Current Game Map" class="map-image">
+            <img src="solosmap.jpg" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
-            <div class="countdown"><span class="timer">5:00</span></div>
+            <div class="countdown"><span class="timer"></span></div>
         </div>
     </div>
 
