--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Resurgence Quads</h2>
         <div class="map-container">
             <div class="map-rotation"></div>
-            <img src="/images/Ashika.jpg" alt="Current Game Map" class="map-image">
+            <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
             <div class="countdown"><span class="timer"></span></div>
         </div>
@@ -32,7 +32,7 @@
     <div class="map-rotation" id="resurgenceTrios">
         <h2>Resurgence Trios</h2>
         <div class="map-container">
-            <img src="https://wzmaprotationimages.s3.amazonaws.com/Ashika.jpg" alt="Current Game Map" class="map-image">
+            <img src="/images/Ashika.webp" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
             <div class="countdown"><span class="timer"></span></div>
         </div>
