--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="map-rotation" id="resurgenceTrios">
         <h2>Resurgence Trios</h2>
         <div class="map-container">
-            <img src="/images/Ashika.webp" alt="Current Game Map" class="map-image">
+            <img src="triosmap.jpg" class="map-image">
             <div class="map-overlay"></div>
             <div class="countdown"><span class="timer"></span></div>
         </div>
