--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
     </header>
 
+    <div class="map-rotations">
     <!-- Map Rotation Section: Resurgence Quads -->
     <section class="map-rotation" id="resurgenceQuads">
         <h2>Resurgence Quads</h2>
@@ -47,7 +48,10 @@
             <div class="map-overlay"></div>
             <div class="countdown"><span class="timer"></span></div>
         </div>
-    </section>
+
+    </div>
+
+</section>
 
     <!-- Map Rotation Section: Resurgence Solos -->
     <section class="map-rotation" id="resurgenceSolos">
