--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="10">
     <link rel="stylesheet" href="styles.css">
+
     <title>WZ MAP ROTATION</title>
 </head>
 
@@ -21,6 +22,7 @@
     <section class="map-rotation" id="resurgenceQuads">
         <h2>Resurgence Quads</h2>
         <div class="map-container">
+            <!-- The empty div with the class "map-rotation" seems unnecessary. Removed it. -->
             <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
             <div class="map-overlay"></div>
             <div class="countdown"><span class="timer"></span></div>
