--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
     </header>
 
+    <div class="map-rotations">
     <!-- Map Rotation Section: Resurgence Quads -->
     <section class="map-rotation" id="resurgenceQuads">
         <h2>Resurgence Quads</h2>
@@ -58,6 +59,7 @@
             <div class="countdown"><span class="timer"></span></div>
         </div>
     </section>
+    </div>
 
     <script src="script.js"></script>
 </body>
