--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="10">
+    <meta http-equiv="refresh" content="300">
     <link rel="stylesheet" href="styles.css">
     <title>WZ MAP ROTATION</title>
 </head>
@@ -16,6 +16,7 @@
     </header>
 
     <!-- Map Rotation Section: Resurgence Quads -->
+    <div class="map-rotations">
     <section class="map-rotation" id="resurgenceQuads">
         <h2>Resurgence Quads</h2>
         <div class="map-container">
@@ -52,6 +53,8 @@
             <div class="countdown"><span class="timer"></span></div>
         </div>
     </section>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
