--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="300">
+    <meta http-equiv="refresh" content="10">
     <link rel="stylesheet" href="styles.css">
 
+    
     <title>WZ MAP ROTATION</title>
 </head>
 
@@ -19,46 +20,41 @@
     </header>
 
     <div class="map-rotations">
-    <!-- Map Rotation Section: Resurgence Quads -->
-    <section class="map-rotation" id="resurgenceQuads">
-        <h2>Resurgence Quads</h2>
-        <div class="map-container">
-            <!-- The empty div with the class "map-rotation" seems unnecessary. Removed it. -->
-            <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
-            <div class="map-overlay"></div>
-            <div class="countdown"><span class="timer"></span></div>
+        <div class="map-rotation" id="resurgenceQuads">
+            <h2>Resurgence Quads</h2>
+            <div class="map-container">
+                <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
+                <div class="map-overlay"></div>
+                <div class="countdown"><span class="timer"></span></div>
+            </div>
         </div>
-    </section>
 
-    <!-- Map Rotation Section: Resurgence Trios -->
-    <section class="map-rotation" id="resurgenceTrios">
-        <h2>Resurgence Trios</h2>
-        <div class="map-container">
-            <img src="triosmap.jpg" class="map-image">
-            <div class="map-overlay"></div>
-            <div class="countdown"><span class="timer"></span></div>
+        <div class="map-rotation" id="resurgenceTrios">
+            <h2>Resurgence Trios</h2>
+            <div class="map-container">
+                <img src="triosmap.jpg" class="map-image">
+                <div class="map-overlay"></div>
+                <div class="countdown"><span class="timer"></span></div>
+            </div>
         </div>
-    </section>
 
-    <!-- Map Rotation Section: Resurgence Duos -->
-    <section class="map-rotation" id="resurgenceDuos">
-        <h2>Resurgence Duos</h2>
-        <div class="map-container">
-            <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
-            <div class="map-overlay"></div>
-            <div class="countdown"><span class="timer"></span></div>
+        <div class="map-rotation" id="resurgenceDuos">
+            <h2>Resurgence Duos</h2>
+            <div class="map-container">
+                <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
+                <div class="map-overlay"></div>
+                <div class="countdown"><span class="timer"></span></div>
+            </div>
         </div>
-    </section>
 
-    <!-- Map Rotation Section: Resurgence Solos -->
-    <section class="map-rotation" id="resurgenceSolos">
-        <h2>Resurgence Solos</h2>
-        <div class="map-container">
-            <img src="solosmap.jpg" alt="Current Game Map" class="map-image">
-            <div class="map-overlay"></div>
-            <div class="countdown"><span class="timer"></span></div>
+        <div class="map-rotation" id="resurgenceSolos">
+            <h2>Resurgence Solos</h2>
+            <div class="map-container">
+                <img src="solosmap.jpg" alt="Current Game Map" class="map-image">
+                <div class="map-overlay"></div>
+                <div class="countdown"><span class="timer"></span></div>
+            </div>
         </div>
-    </section>
     </div>
 
     <script src="script.js"></script>
