Base V2 index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="map-rotation" id="resurgenceDuos">
             <h2>Resurgence Duos</h2>
             <div class="map-container">
-                <img src="quadsmap.jpg" alt="Current Game Map" class="map-image">
+                <img src="duosmap.jpg" alt="Current Game Map" class="map-image">
                 <div class="map-overlay"></div>
                 <div class="countdown"><span class="timer"></span></div>
             </div>
